--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+; PlatformIO example Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -34,7 +34,7 @@ monitor_port = /dev/cu.wchusbserial531C0101801
 upload_port = /dev/cu.wchusbserial531C0101801
 monitor_speed = 115200
 lib_deps = adafruit/Adafruit SSD1306@^2.5.7
-; Better partioning
+; Some partioning
 board_build.partitions = min_spiffs.csv
 
 
@@ -51,7 +51,7 @@ monitor_port = /dev/cu.wchusbserial537E0890921
 upload_port = /dev/cu.wchusbserial537E0890921
 monitor_speed = 115200
 
-; Better partioning
+; Some partioning
 board_build.partitions = min_spiffs.csv
 
 [env:uno]
