--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_extra_dirs = components
 ; If there is a way to make things work without turning of compatibility checks?
 lib_compat_mode = off
 
+
 [env:ttgo-lora32-v1]
 ; Used with the The TTGO LORA32 SX1278 board
 platform = https://github.com/platformio/platform-espressif32.git#v6.0.1
@@ -32,6 +33,7 @@ board = ttgo-lora32-v1
 
 monitor_port = /dev/cu.wchusbserial531C0101801
 upload_port = /dev/cu.wchusbserial531C0101801
+test_port = /dev/cu.wchusbserial531C0101801 
 monitor_speed = 115200
 lib_deps = adafruit/Adafruit SSD1306@^2.5.7
 ; Some partioning
@@ -49,6 +51,7 @@ board = ttgo-t-beam
 ;upload_port = /dev/cu.wchusbserial54FC0473971
 monitor_port = /dev/cu.wchusbserial537E0890921
 upload_port = /dev/cu.wchusbserial537E0890921
+test_port = /dev/cu.wchusbserial537E0890921
 monitor_speed = 115200
 
 ; Some partioning
