Add KConfig support

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,9 @@ test_dir = test
 test_framework = unity
 monitor_raw = yes
 
+extra_scripts =
+  pre:scripts/pre-build.py
+  scripts/init_env.py
 [env:native]
 ; Linux/MacOs/Windows functionality.
 platform=native
@@ -47,11 +50,9 @@ framework = espidf
 platform_packages = platformio/framework-espidf@^3.50000.0
 board = ttgo-t-beam
 
-;monitor_port = /dev/cu.wchusbserial54FC0473971
-;upload_port = /dev/cu.wchusbserial54FC0473971
-monitor_port = /dev/cu.wchusbserial537E0890921
-upload_port = /dev/cu.wchusbserial537E0890921
-test_port = /dev/cu.wchusbserial537E0890921
+monitor_port = /dev/cu.wchusbserial54FC0473971
+upload_port = /dev/cu.wchusbserial54FC0473971
+test_port = /dev/cu.wchusbserial54FC0473971
 monitor_speed = 115200
 
 ; Some partioning
@@ -64,5 +65,6 @@ board = uno
 framework = arduino
 lib_extra_dirs = components
 
-monitor_port = /dev/cu.usbmodem142401
-upload_port = /dev/cu.usbmodem142401
+monitor_port = /dev/cu.usbmodem1423201
+upload_port = /dev/cu.usbmodem1423201
+test_port = /dev/cu.usbmodem1423201
