--- a/components/robusto-base/CMakeLists.txt
+++ b/components/robusto-base/CMakeLists.txt
@@ -1,12 +1,12 @@
 FILE(GLOB rob_sources 
 "include/*.h"
+"src/init/*.c" 
 "src/logging/*.c" 
 "src/time/*.c" 
-"src/init/*.c" 
+"src/system/*.*" 
 )
-
 idf_component_register(
     SRCS ${rob_sources} 
     INCLUDE_DIRS . include 
-    REQUIRES esp_timer
+    REQUIRES driver esp_timer
 )
