--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,5 @@ FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.c)
 
 idf_component_register(
     SRCS ${app_sources}
-    REQUIRES robusto-common
+    REQUIRES robusto-base
 )
