--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,5 +5,5 @@ FILE(GLOB_RECURSE test_sources ${CMAKE_SOURCE_DIR}/*.c)
 
 idf_component_register(
     SRCS ${test_sources}
-    REQUIRES robusto-common
+    REQUIRES robusto-base
 )
